# TextHarvester

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  INSTALLATION.md  INTELLIGENCE-ROADMAP.md  INTELLIGENCE_IMPLEMENTATION_NOTES.md  README-SETUP.md  README.md  README_INTELLIGENCE.md  intelligence_test_results_20250509_074654.json  requirements-intelligence.txt  requirements.txt  run_mockup.py  run_text_harvester.py  setup.py  setup_intelligence.py  start_rust_extractor.bat  start_rust_extractor.py  start_textharvester.bat  start_textharvester.ps1
TextHarvester/: .env.example  .gitignore  .replit  README - TextHarvester.md  add_indices.py  app.py  check_extractor.py  direct_migrate.py  main.py  migrate_db.py  models.py  models_update.py  pyproject.toml  rename_column.py
TextHarvester/rust_extractor/: Cargo.toml  README.md  build.sh
TextHarvester/rust_extractor/src/: lib.rs  main.rs
TextHarvester/rust_extractor/src/api/: mod.rs  server.rs  state.rs
TextHarvester/rust_extractor/src/api/handlers/: export.rs  extract.rs  mod.rs
TextHarvester/rust_extractor/src/exporters/: job_exporter.rs  mod.rs
TextHarvester/rust_extractor/src/extractors/: content.rs  html.rs  mod.rs  text_cleaner.rs
TextHarvester/rust_extractor/src/models/: database.rs  mod.rs  request.rs  response.rs
TextHarvester/rust_extractor/src/utils/: logger.rs  mod.rs  text.rs  url_utils.rs
api/: __init__.py
db_migrations/: update_entity_models.py
docs/: database.md  index.md
examples/: basic_pipeline_example.py  integrated_content_intelligence.py  test_classification.py  (+2 more)
(+130 files in other folders)
